--- a/ClinicManager/Views/community/detail_patient.cshtml
+++ b/ClinicManager/Views/community/detail_patient.cshtml
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    @*Detail patient updated*@
     <title>Chi tiết bệnh nhân</title>
 
     <!-- Custom fonts for this template -->
