--- a/ClinicManager/Views/receptionist/set_the_order.cshtml
+++ b/ClinicManager/Views/receptionist/set_the_order.cshtml
@@ -14,6 +14,7 @@
     <meta name="author" content="">
 
     <title>Cập nhật thứ tự</title>
+    @*update set the missing order*@
 
     <!-- Custom fonts for this template -->
     <link href="~/Template/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
