--- a/ClinicManager/Views/receptionist/new_health_record.cshtml
+++ b/ClinicManager/Views/receptionist/new_health_record.cshtml
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    @*update health record*@
     <title>Hồ sơ mới</title>
 
     <!-- Custom fonts for this template -->
