update set missing the order #2

--- a/ClinicManager/Views/receptionist/set_the_order.cshtml
+++ b/ClinicManager/Views/receptionist/set_the_order.cshtml
@@ -64,7 +64,7 @@
 <body id="page-top">
     <!-- Page Wrapper -->
     <div id="wrapper">
-
+        @*update set mising the oder #2*@
         <!-- Sidebar -->
         <div id="Sidebar">
             <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
